# xpoject_smart_calc

./: .build-tools.cson  AST_tree.cpp  AST_tree.h  CMakeCache.txt  CMakeLists.txt  Lexer.cpp  Lexer.h  Lexer.hpp  Makefile  Parser.cpp  Parser.h  Parser.hpp  cmake_install.cmake  main.cpp  table.cpp  table.h  table.hpp
